--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,9 @@
 	<title>Заголовок</title>
 </head>
 <body>
-<h1>Подзаголовок</h1> 
+<h1>Подзаголовок 1.</h1> 
+<h1>проба</h1> 
+<h2>Подзаголовок 2.</h2>
+<h2>Бубубу</h2>  
 </body>
 </html>
